# PTR_v2

./: .env.development.example  .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.ai/handoffs/: PTR-19-frontend-docker-dev.md  README.md  (+3 more)
.github/: CODEOWNERS  pull_request_template.md
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 4af33f882465_baseline_empty_schema.py  7c8bb0c12f4a_add_command_dedup_and_game_audit_events.py  d4f0a6b8c201_add_tavern_party_raid_tables.py  e8f4a2b1c9d0_add_players_and_sessions.py
apps/backend/app/: db.py  errors.py  export_openapi.py  main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: battle_ws.py  lobby_ws.py  persistent_resources.py  sessions.py
apps/backend/app/authority/: __init__.py
apps/backend/app/models/: __init__.py  base.py  command_dedup.py  game_audit_event.py  identity.py  party_raid.py  tavern.py
apps/backend/app/schemas/: resources_v1.py  session.py
apps/backend/app/services/: __init__.py  combat_engine.py  command_dedup.py  game_audit.py  raid_rewards.py  raid_setup.py  session.py  tavern.py
apps/backend/scripts/: check_db_schema_sync.py
apps/backend/tests/: conftest.py  test_battle_ws.py  test_combat_engine.py  test_command_dedup.py  test_game_audit.py  test_health.py  test_lobby_ws.py  test_persistent_resources.py  test_raid_rewards.py  test_sessions.py
scripts/: smoke-frontend-docker.sh  validate-handoff.sh
tests/: test_smoke.py
(+82 files in other folders)
