[project]
name = "ptr-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0,<0.116",
  "uvicorn[standard]>=0.32.0,<0.33",
  "psycopg[binary]>=3.2.0,<3.3",
  "alembic>=1.14,<2",
  "sqlalchemy>=2.0,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
